WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158660
Crash in com.apple.WebKit.WebContent at std::__1::__call_once_proxy<std::__1::tuple<CrashReporterSupportLibrary()::$_0&&> >
https://bugs.webkit.org/show_bug.cgi?id=158660
Summary
Crash in com.apple.WebKit.WebContent at std::__1::__call_once_proxy<std::__1:...
David Kilzer (:ddkilzer)
Reported
2016-06-11 06:08:39 PDT
Crash in com.apple.WebKit.WebContent at std::__1::__call_once_proxy<std::__1::tuple<CrashReporterSupportLibrary()::$_0&&> > is because CrashReporterSupport.framework is in /S/L/PrivateFrameworks/, not /S/L/Frameworks/. This regressed in commit
r198809
for
Bug 155409
.
Attachments
Patch v1
(2.59 KB, patch)
2016-06-11 06:15 PDT
,
David Kilzer (:ddkilzer)
darin
: review+
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(633.54 KB, application/zip)
2016-06-11 07:21 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2016-06-11 06:14:32 PDT
<
rdar://problem/25652686
>
David Kilzer (:ddkilzer)
Comment 2
2016-06-11 06:15:18 PDT
Created
attachment 281098
[details]
Patch v1
Build Bot
Comment 3
2016-06-11 07:21:32 PDT
Comment on
attachment 281098
[details]
Patch v1
Attachment 281098
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1484092
New failing tests: fast/scrolling/ios/scroll-event-from-scrollTo.html
Build Bot
Comment 4
2016-06-11 07:21:34 PDT
Created
attachment 281099
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
David Kilzer (:ddkilzer)
Comment 5
2016-06-11 10:16:33 PDT
(In reply to
comment #3
)
> Comment on
attachment 281098
[details]
> Patch v1 > >
Attachment 281098
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
http://webkit-queues.webkit.org/results/1484092
> > New failing tests: > fast/scrolling/ios/scroll-event-from-scrollTo.html
I suspect a newly flakey test, but not enough data yet: <
http://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast/scrolling/ios/scroll-event-from-scrollTo.html
> It's highly unlikely that this change could cause this test to fail.
Darin Adler
Comment 6
2016-06-11 12:23:17 PDT
Comment on
attachment 281098
[details]
Patch v1 Any idea why the tests are failing?
David Kilzer (:ddkilzer)
Comment 7
2016-06-11 13:51:56 PDT
(In reply to
comment #6
)
> Comment on
attachment 281098
[details]
> Patch v1 > > Any idea why the tests are failing?
See
Comment #5
.
David Kilzer (:ddkilzer)
Comment 8
2016-06-12 06:24:14 PDT
Committed
r201983
: <
http://trac.webkit.org/changeset/201983
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug