Crash in com.apple.WebKit.WebContent at std::__1::__call_once_proxy<std::__1::tuple<CrashReporterSupportLibrary()::$_0&&> > <https://webkit.org/b/158660> <rdar://problem/25652686>

Reviewed by Darin Adler.

* bmalloc/Logging.cpp: Switch to use
BSOFT_LINK_PRIVATE_FRAMEWORK() to link
CrashReporterSupport.framework.
* bmalloc/darwin/BSoftLinking.h:
(BSOFT_LINK_PRIVATE_FRAMEWORK): Rename from BSOFT_LINK_FRAMEWORK.
Switch to use /System/Library/PrivateFrameworks/.

Canonical link: https://commits.webkit.org/176762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201983 268f45cc-cd09-0410-ab3c-d52691b4dbfc